--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -1,4 +1,4 @@
-File: xxx
+File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_108/blob/main/weblog/2025/December_2025_v1_09122025.md
 
 # December 2025 #
 
