Add historical context to Swedish language status
Expanded on the historical context of the Swedish language, detailing its status over the past 1000 years and the influence of other languages.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -42,3 +42,39 @@ Citations:
 [16] Sociolekter https://www.kursnavet.se/kurser/svenskab_aso_uppdaterad/htm/modul2/02_04b.htm
 [17] Swedish dialects... : r/Svenska https://www.reddit.com/r/Svenska/comments/3r67eo/swedish_dialects/
 [18] Geografisk indelning https://www.isof.se/dialekter/lastips-dialekter/geografisk-indelning
+
+
+
+"Interestingly, Swedish wasn’t legally declared as the official language of Sweden until 2009": Is this a nonsense?
+
+No, the statement is not nonsense; it is factually accurate. [1][2]
+
+Swedish served as Sweden's *de facto* primary language for centuries, used in government, education and daily life without formal legal designation. [1] A language law (*Språklag* SFS 2009:600), passed by the Riksdag and effective from July 1, 2009, explicitly declared Swedish the main language of society and official for international contexts, whilst protecting minority languages. [2][7]
+
+Prior attempts, like a 2005 bill, narrowly failed, highlighting the deliberate timing of the 2009 enactment amid concerns over English's growing influence. [1][3]
+
+Citations:
+[1] Swedish language https://en.wikipedia.org/wiki/Swedish_language
+[2] Languages of Sweden - Wikipedia https://en.wikipedia.org/wiki/Languages_of_Sweden
+[3] Languages of Sweden - Wikipedia https://en.wikipedia.org/wiki/English_in_Sweden
+[4] Swedish Language | Research Starters - EBSCO https://www.ebsco.com/research-starters/language-and-linguistics/swedish-language
+[5] Swedish language | History, Grammar & Vocabulary - Britannica https://www.britannica.com/topic/Swedish-language
+[6] Old Swedish https://en.wikipedia.org/wiki/History_of_Swedish
+[7] 4 facts about the Swedish language https://stptrans.com/4-facts-about-the-swedish-language/
+[8] Old Swedish/Medieval Swedish https://storylearning.com/learn/swedish/swedish-tips/swedish-language-history
+[9] A brief history of the Swedish Language https://www.youtube.com/watch?v=qiM1Lvi2c9g
+[10] The Fascinating Origins and Global Influence of the Swedish Language https://www.polilingua.com/blog/post/swedish-official-language-of-sweden-global-influence.htm
+
+
+**So, what were the official language(s) for the past 1000 years?**
+
+Sweden had no legally designated "official language" for most of the past 1000 years; Swedish functioned as the de facto primary language in administration, law, and daily life from the medieval period onward, evolving from Old Norse without formal codification until 2009 [1][2].
+
+Latin served as the official language of the Catholic Church, scholarship, and much international diplomacy from around AD 1000 (Christianization) through the Reformation, with key texts like laws and early Bibles initially in Latin [2]. Low German emerged as a commercial lingua franca in medieval Sweden due to Hanseatic League influence, especially in trade hubs like Stockholm where half the population spoke it by the late Middle Ages [2].
+
+French held prestige among the 18th-century aristocracy and court under Gustav III, functioning as a second language for elites, while regional dialects and Finnish predominated in former eastern territories until 1809 [2]. Since 1999 (formalized in 2009), five national minority languages—Finnish, Meänkieli, Romani, Sámi languages, and Yiddish—plus Swedish Sign Language, have official minority status alongside Swedish [2].
+
+Citations:
+[1] Swedish language https://en.wikipedia.org/wiki/Swedish_language
+[2] Languages of Sweden - Wikipedia https://en.wikipedia.org/wiki/Languages_of_Sweden
+
