--- a/bibliography/a_to_k_v1_09122025.md
+++ b/bibliography/a_to_k_v1_09122025.md
@@ -1,4 +1,4 @@
-File: ...
+File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_108/blob/main/bibliography/a_to_k_v1_09122025.md
 
 # Bibliography: A to K #
 
