--- a/bibliography/l_to_z_v1_09122025.md
+++ b/bibliography/l_to_z_v1_09122025.md
@@ -1,4 +1,4 @@
-File: ...
+File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_108/blob/main/bibliography/l_to_z_v1_09122025.md
 
 # Bibliography: L to Z #
 
