--- a/bibliography/a_to_k_v1_09122025.md
+++ b/bibliography/a_to_k_v1_09122025.md
@@ -2,4 +2,7 @@ File: https://github.com/b9Joker108/b9_hummingbird_hovering_swedish_acquisition_
 
 # Bibliography: A to K #
 
-...
+
+
+Ahlgren, Jennie; Holmes, Philip; & Serin, Gunilla (2007, 2006 \[Third edition], 2003, 2001, 1999, 1998, 1996 \[Revised edition], 1995, 1993 \[twice], 1990 \[First edition]). 'Colloquial Swedish: The Complete Course for Beginners'. Third edition. Routledge (is an imprint of the Taylor & Francis Group). ISBN 9780415362757 (pbk).
+
