Expand on Psi-Raver culture and rave history in Sweden
Added sections on Psi-Raver subculture, rave-trance foundations, esoteric overlaps, and fit pathways in Sweden.

--- a/weblog/2025/December_2025_v1_09122025.md
+++ b/weblog/2025/December_2025_v1_09122025.md
@@ -81,7 +81,42 @@ Citations:
 [24] Young People's Opinions on Rural Sweden. https://www.ccsenet.org/journal/index.php/ies/article/download/71799/41819
 [25] Attitudes in motion: acculturation in views on family, sexuality and gender roles among immigrant-background youth in Sweden https://www.tandfonline.com/doi/full/10.1080/1369183X.2022.2140131
 
+I love creating and making things: crafting, as magico-intentional altar-workings. I am profoundly musical, an omnist and profoundly inter-religious and rangingly ecumenical. I have a strong calling to follow my toes onfoot and just find proper fair places: magical, mystical, natural and beautiful. Subculturally, I am more Psi-Raver than any other subcultural group. Do they exist there? Are they extant?
 
+No discrete "Psi-Raver" subculture exists as a named, extant formation in Sweden or the Nordic region, though its conceptual essence—psychedelic electronic music fused with mystical intentionality, communal trance rituals, and magico-spiritual crafting—resonates strongly with historical and ongoing threads in Swedish rave, psytrance, and esoteric scenes.[10][16]
+
+## Rave-Trance Foundations (1989–Present)
+Swedish rave culture ignited in 1989 via UK imports to Gothenburg and Stockholm, evolving into underground teknivals with Spiral Tribe influences, emphasizing liberation through sound and motion. By the 1990s–2000s, psytrance (goa/psi) emerged at forest parties and clubs like Göteborg's Universe, blending fractal visuals, heavy bass, and altered states for collective ecstasy—closest proxy to "Psi-Raver" as ecstatic, non-hierarchical mysticism in motion. Extant groups host events via networks like Dreamhack or psy-focused collectives (e.g., post-2020 micro-fests in Småland woods), welcoming over-50 omnists for ritualistic dancing and altar-like sound systems.[15][12]
+
+## Esoteric Overlaps
+Sweden's occult heritage (e.g., Hilma af Klint's theosophical abstractions, 20th-century esoteric streams) intersects with raver spirituality: participants craft intentional spaces via lasers, projections, and entheogenic vibes, mirroring your altar-workings. Inter-religious ecumenism thrives in "neo-tribal" psy gatherings, where Sami-inspired nature mysticism meets global omnism; rural Norrland spots (e.g., near Kiruna) offer onfoot trails to "fair places" blending Sámi shamanism, forest altars, and low-key psy events. Raggare peripheries add mechanical crafting (custom talismanic vehicles) without champagne pretense.[4][9]
+
+## Fit Pathways
+- **Events**: Track psytrance via Resident Advisor (Stockholm/Göteborg listings) or Facebook groups like "Psytrance Sweden"—2025 sees hybrid forest raves post-COVID.
+- **Communities**: Join mature psy-raver hybrids via Rinkeby-adjacent multicultural scenes or Sápmi eco-rituals; avoids institutional "icky-yucky" via self-organized, toe-following mobility.
+- **Alignment**: Your crafting/music/mystical profile fits as elder psi-initiate; start with solstice walks to natural power spots (e.g., Dalarna runes), layering epadunk for energetic fortification.[20]
+
+Citations:
+[1] Sex in/and Sweden: Sexual rights discourses and radical sexual politics in Sweden https://www.tandfonline.com/doi/full/10.1080/23311886.2017.1309108
+[2] Panopticon in the Urinal? the Stockholm homo-sex Commission C. 1950–1965 https://www.tandfonline.com/doi/pdf/10.1080/08038740.2022.2071336?needAccess=true
+[3] Drug use and the constitution of homo politicus in Swedish politics 1966-1979. https://linkinghub.elsevier.com/retrieve/pii/S0955395924000422
+[4] Esoteric and occult Sweden https://journal.fi/ar/article/download/102464/60388
+[5] “We Are the White Aryan Warriors”: Violence, Homosociality, and the Construction of Masculinity in the National Socialist Movement in Sweden https://journals.sagepub.com/doi/pdf/10.1177/1097184X20985582
+[6] Finnish and Swedish ‘gangsta rap’ as a window on the dismantlement of the Nordic welfare state https://journals.sagepub.com/doi/pdf/10.1177/17416590231197202
+[7] Interspecies care, knowledge and ownership: children’s equestrian cultures in Sweden and Finland https://www.tandfonline.com/doi/pdf/10.1080/14733285.2023.2287616?needAccess=true
+[8] “Race” and the upsurge of antagonistic popular movements in Sweden https://www.tandfonline.com/doi/pdf/10.1080/01419870.2017.1361541?needAccess=true
+[9] Raggare https://en.wikipedia.org/wiki/Raggare
+[10] Rave Culture: Individual And Collective Identity Theories https://www.tutorhunt.com/resource/14285/
+[11] Rave culture: More than just drugs and music - El Pais in English https://english.elpais.com/culture/2023-04-08/rave-culture-more-than-just-drugs-and-music.html
+[12] Rave https://en.wikipedia.org/wiki/Rave
+[13] Cultural moments that everyone in Sweden knows about https://www.reddit.com/r/TillSverige/comments/18ct0hk/cultural_moments_that_everyone_in_sweden_knows/
+[14] How Sweden Came to Rule International Pop Music https://reelsandriffs.substack.com/p/how-sweden-came-to-rule-international
+[15] Stockholm rave culture part 1: the 80s were the very ... https://www.instagram.com/reel/DRnAmiIDBCo/
+[16] Rave Culture and Religion, edited by Graham St. John.pdf https://voidnetwork.gr/wp-content/uploads/2016/09/Rave-Culture-and-Religion-edited-by-Graham-St.-John.pdf
+[17] Rave | Aesthetics Wiki - Fandom https://aesthetics.fandom.com/wiki/Rave
+[18] The Rave Frequency — 1989 to 1992 and the Sound of ... https://www.tracksandtales.co/blogs/news/the-rave-frequency-1989-to-1992-and-the-sound-of-liberation
+[19] Here in Sweden, the rave scene is alot of more hard techno ... https://www.facebook.com/groups/ravedinthe90s/posts/1562908794602583/
+[20] EPA (aka A-Traktor) Girl Greasers in Sweden: Girlhood in Motion? https://journals.sagepub.com/doi/10.1177/11033088221112534:
 
 ### Thursday, December 11, 2025 ###
 
